# qkrun

./: .gitignore  .vscode_extensions  Cargo.toml  README.md  ROADMAP.md  Thoughts.md  build_template.yaml
.github/workflows/: main.yml
build_images/buildkit_build/.pulumi/: Pulumi.yaml  __main__.py
build_images/buildkit_build/CA_generate_server_client/: README.md  build-a-pki.sh  openssl.cnf
build_images/buildkit_build/CA_generate_server_client/dev/: client.cert  server.cert  server.rsa
build_images/dockerfiles/: README.md
build_images/dockerfiles/code_server_with_ssh/: Dockerfile
build_images/dockerfiles/rust/: Dockerfile
build_images/dockerfiles/ubuntu20_ssh/: Dockerfile
build_images/dockerfiles/vscode_server_only/: Dockerfile
build_images/kaniko_build/: __main__.py  kaniko.yaml
gitpod_like/base_code_server/pod_hostnet/: README.md
gitpod_like/base_code_server/statefulset/host_net/: rustdev.yaml
qkrun/: Cargo.toml
qkrun/src/: cli.rs  k8sapply.rs  lib.rs  main.rs
qkrun/src/models/: yaml.rs
quickrun/: .gitignore  Cargo.toml
quickrun/examples/: demo1.rs
quickrun/src/: cli.rs  k8sapi.rs  lib.rs  main.rs
quickrun/src/buildimg/: kaniko_build.rs  kaniko_docker.rs  kaniko_pod.rs  mod.rs  usebuildkit.rs
quickrun/src/dockerapi/: mod.rs  runcontainerd.rs
quickrun/src/templates/: mod.rs  models.rs  storage.rs
quickrun/src/templates/yamlfiles/: kaniko_docker.yaml  kaniko_pod.yaml  resourcequota.yaml  vscode.yaml
quickrun/src/tools/: mod.rs  vscode_extension_for_rust.rs
quickrun/unused_files/: k8s_kaniko.rs  k8s_sts.rs
text/: notes1.md  wl.yml
tuna_mirrors/: README.md
tuna_mirrors/.cargo/: config
txt/build_images/buildkit_build/: README.md
txt/build_images/kaniko_build/: Pulumi.yaml  kaniko_local_contenxt.yaml
txt/config_template/: kaniko_docker_build_template.yaml
txt/storage/: local-storageclass.yaml
(+14 files in other folders)
