[package]
name = "qkrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
base64 = "0.21.0"
clap = { version = "4.1.6", features = ["derive", "cargo"] }
k8s-openapi = { version = "0.17", features = ["v1_23"] }
kube = { version = "0.78.0", features = ["runtime", "derive"] }
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_yaml = "0.9.17"
tinytemplate = "1.2.1"
tokio = { version = "1.25.0", features = ["macros", "full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
